# SoccerApi

./: .gitignore  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: analytics.py  clubs.py  competition_sim.py  competitions.py  games.py  ingest.py  players.py  simulator.py
app/ingest/: soccerdata_client.py  statsbomb.py  worker.py
app/simulator/: match_simulator.py  monte_carlo.py  ratings.py  tournament.py  world_cup_2026.py  xgc.py
app/simulator/competitions/: base.py  group_knockout.py  league.py  registry.py
app/xgc_event/: attribution.py  goal_probability.py  player_xgc.py
soccer_app/: crud.py  database.py  main.py  models.py  schemas.py
