[project]
name = "soccerapi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1",
    "aiohttp>=3.11",
    "alembic>=1.14",
    "fastapi>=0.115",
    "pydantic>=2.10",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "ruff>=0.9",
]
data = [
    "soccerdata>=1.8",
]
ml = [
    "numpy>=2.2",
    "scikit-learn>=1.6",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["app"]
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = false
